Hiding anchor if collapsed sections on mobile Adjusting placement of anchor to account for non-sticky header Adding margin-bottom to header to adjust for it no longer being sticky

--- a/waters-aem-frontend/src/styles/externalheader.scss
+++ b/waters-aem-frontend/src/styles/externalheader.scss
@@ -4,7 +4,7 @@
     position: relative;
     width: 100%;
     height: 77px;
-    z-index: 100;
+    margin-bottom: $space-m;
 
     &__logo {
         padding: 1.2em 0 ($space-s - 0.1em);
